# si

./: .gitignore  Cargo.toml  README.md  t.c  t.ld
crates/silicac/: Cargo.toml
crates/silicac/dts_examples/: nrf52840dk.dts  nrf52840dk.imported.si
crates/silicac/evals/: REPORT.md
crates/silicac/evals/author_counter/: candidate.si  prompt.md  solution.si
crates/silicac/evals/author_heartbeat/: candidate.si  prompt.md  solution.si
crates/silicac/evals/debug_narrowing/: before.si  candidate.si  prompt.md  solution.si
crates/silicac/evals/edit_add_second_led/: before.si  candidate.si  prompt.md  solution.si
crates/silicac/src/: ast.rs  diag.rs  dts.rs  eval.rs  layer3.rs  lexer.rs  lib.rs  main.rs  metrics.rs  parser.rs  resolver.rs  sir.rs
crates/silicac/src/backend/: c.rs  llvm.rs  mod.rs  stackinfo.rs
crates/silicac/src/sim/: mod.rs
crates/silicac/std/: bme280.si  gpio.si  i2c.si  i2c_controller.si  nrf_gpio.si  spi.si  spi_controller.si  timer.si  watchdog.si
crates/silicac/tests/: agentic_eval.rs  atomic.rs  await.rs  bme280.rs  buffer.rs  casts.rs  composition.rs  deadline.rs  deadline_metal.rs  dts_import.rs  escape_hatch.rs  fixed.rs  flash_budget.rs  fpu.rs  instant.rs  interface_props.rs  llvm_canary.rs  match_stmt.rs  metal_codegen.rs  no_privileged_builtins.rs  overflow.rs  overflow_policy.rs  overlay.rs  poll.rs  pool.rs  reg_access.rs  reg_multifield.rs  ring.rs  sim_blink_button.rs  sim_bus_arbitration.rs  sim_composition.rs  sim_fault_decode.rs  sim_safe_state.rs  sim_watchdog.rs  stack.rs  stackinfo.rs  typestate.rs  unknown_types.rs
(+128 files in other folders)
